<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvTodo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:contentPadding="5dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/ibDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/done_icon_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_radio_button_not_done_green_24dp" />

        <TextView
            android:id="@+id/tvTodoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/default_todo_title"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ibDone"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTodoDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/default_todo_date"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivDateIcon"
            app:layout_constraintTop_toBottomOf="@+id/tvTodoTitle" />

        <ImageView
            android:id="@+id/ivDateIcon"
            android:layout_width="15dp"
            android:layout_height="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/date_icon_description"
            app:layout_constraintStart_toEndOf="@+id/ibDone"
            app:layout_constraintTop_toBottomOf="@+id/tvTodoTitle"
            app:srcCompat="@drawable/ic_event_note_dark_gray_24dp" />

        <ImageButton
            android:id="@+id/ibFavouriteToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/favourite_icon_description"
            app:layout_constraintEnd_toStartOf="@+id/ibEdit"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite_border_dark_gray_24dp" />

        <ImageButton
            android:id="@+id/ibEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/edit_icon_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit_black_24dp" />

        <ImageButton
            android:id="@+id/ibDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/delete_contact_icon_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete_dark_grey_24dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
